# chip8-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/: chip8_system.h  cpu.h  renderer.h  utils.h
lib/: CMakeLists.txt  chip8_system.cpp  cpu.cpp  renderer.cpp  utils.cpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_cpu.cpp
